Add Flexbox layout to index.html and tweets.html using styles.css

--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -2,25 +2,76 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Flexbox Layout</title>
-  <link href="styles.css" rel="stylesheet">
+  <title>My First HTML Page</title>
+  <link href="base.css" rel="stylesheet">
+<link href="styles.css" rel="stylesheet">
 </head>
 <body>
   <header>
-    Content of the <header> tag
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="tweets.html">Tweets</a></li>
+    </ul>
   </header>
 
   <main>
     <article>
-      Content of the <article> tag
+      <h1>Welcome to Matilda's Webpage</h1>
+      <h2>About Me</h2>
+      <p>Hi there! I'm learning frontend development and enjoying every step.</p>
+      <p>This is my second HTML assignment, and I'm feeling more confident now.</p>
+
+      <h3>My Hobbies</h3>
+      <p>I love design, coding, exploring tech tools, and helping others grow.</p>
+      <p>Stick around as I build out my first portfolio from scratch!</p>
+
+      <a href="https://www.alxafrica.com/" target="_blank">
+        <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="Clickable ALX Logo" width="200">
+      </a>
+
+      <p><a href="tweets.html">See My Tweets →</a></p>
+      
+      <h3>Meet Some Learners</h3>
+<table border="1">
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th>Age</th>
+      <th>Country</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>John</td>
+      <td>25</td>
+      <td>USA</td>
+    </tr>
+    <tr>
+      <td>Emily</td>
+      <td>28</td>
+      <td>Canada</td>
+    </tr>
+    <tr>
+      <td>Michael</td>
+      <td>32</td>
+      <td>Australia</td>
+    </tr>
+    <tr>
+      <td>Sophia</td>
+      <td>21</td>
+      <td>UK</td>
+    </tr>
+  </tbody>
+</table>
     </article>
+
     <aside>
-      Content of the <aside> tag
+      <p>placeholder to add comment thread later</p>
     </aside>
   </main>
 
   <footer>
-    Content of the <footer> tag
+    <p>Made by Matilda Esenam Gbeve - <a href="https://github.com/gemgeek" target="_blank">here</a></p>
   </footer>
 </body>
 </html>
