--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>My First HTML Page</title>
-  <link href="base.css" rel="stylesheet">
-<link href="styles.css" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Flexbox Layout</title>
+  <link href="styles.css" rel="stylesheet">
 </head>
-<body>
+<body class="works_on_smartphone">
   <header>
     <ul>
       <li><a href="index.html">Home</a></li>
