Styled article and added logo for personal touch

--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -8,11 +8,12 @@
 </head>
 <body class="works_on_smartphone">
   <header>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="tweets.html">Tweets</a></li>
-    </ul>
-  </header>
+  <ul>
+    <li class="logo">&#9881;</li> <!-- Unicode gear icon (⚙) -->
+    <li><a href="index.html">Home</a></li>
+    <li><a href="tweets.html">Tweets</a></li>
+  </ul>
+</header>
 
   <main>
     <article>
