Update changes made and add script.js

--- a/headphones/8-index.html
+++ b/headphones/8-index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Headphones - Animated</title>
+    <title>Headphones - Hamburger Menu</title>
     <!-- Link to our custom CSS file -->
-    <link rel="stylesheet" href="7-styles.css">
+    <link rel="stylesheet" href="8-styles.css">
 </head>
 <body>
     <!-- Header/Hero Section -->
@@ -152,6 +152,6 @@
             <p>&copy;headphones 2020</p>
         </div>
     </footer>
-
+    <script src="8-script.js"></script>
 </body>
 </html>
